<resources>
    <string name="app_name">Soft Skills Meter</string>

    <string name="greeting">Hi %s!</string>
    <string name="start_interview">Start Interview</string>
    <string name="previous_interviews">Previous Interviews</string>
    <string name="feedback">Feedback</string>
    <string name="final_score">Final Score</string>
    <string name="interview_details">Interview Details</string>
    <string name="click_for_details">Click for more details</string>
    <string name="no_previous_interviews">You have no interviews</string>
    <string name="tip_placeholder">Today’s Tip: Back up your answer with an example \nfrom your personal experience.</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="instructions">Interview Instructions</string>
    <string name="instructions_do_not_show">Don\'t show instructions again</string>
    <string name="start">Start</string>
    <string name="question">Question 1</string>
    <string name="record_now">Record Now</string>
    <string name="or">OR</string>
    <string name="record_after">Your answer will be recorded after</string>
    <string name="time_left">you still have 00:00 minutes</string>
    <string name="remaining_time">Remaining Time</string>
    <string name="resume_recording">Resume Recording</string>
    <string name="submit">Submit</string>
    <string name="share">Share on social media</string>
    <string name="your_answers">Your Answers</string>
    <string name="login">Login</string>
    <string name="register">Register Now</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="notifications">Notifications</string>
    <string name="show_instructions">Show Instructions</string>
    <string name="faq">FAQ</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>

    // Profile
    <string name="interview_score_details">interview score details</string>
    <string name="personal_information">Personal Information</string>
    <string name="max_score">Max Score</string>
    <string name="min_score">Min Score</string>
    <string name="score_average">Score Average</string>
    <string name="no_of_interviews">Number of Interviews</string>
    <string name="specialization">Specialization</string>
    <string name="gender">Gender</string>
    <string name="dob">Date of Birth</string>
    <string name="share_1">Share</string>

    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>