<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundPrimary"
        tools:context=".ui.home.fragments.HomeFragment">

        <ImageView
            android:id="@+id/iv_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/header"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_greeting"
            style="@style/TitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xxlarge"
            android:text="@string/instructions"
            app:layout_constraintBottom_toBottomOf="@id/iv_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.33" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/regular"
            android:layout_marginTop="@dimen/regular"
            android:background="@drawable/background_fill_white_radius_large"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintTop_toBottomOf="@id/tv_greeting">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="10"
                tools:listitem="@layout/item_instructions" />

            <LinearLayout
                android:layout_width="match_parent"

                android:layout_marginTop="@dimen/regular"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="24dp"
                    android:layout_height="24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/regular"
                    android:layout_gravity="center_vertical"
                    android:text="@string/instructions_do_not_show" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_start"
                style="@style/ButtonPrimaryStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/regular"
                android:text="@string/start" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>