<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainNavigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_instructionsFragment"
            app:destination="@id/instructionsFragment" />
        <action
            android:id="@+id/action_navigation_home_to_interviewDetailsFragment"
            app:destination="@id/interviewDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.graduation.softskillsmeter.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.graduation.softskillsmeter.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/instructionsFragment"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.InstructionsFragment"
        android:label="InstructionsFragment" >
        <action
            android:id="@+id/action_instructionsFragment_to_questionFragment"
            app:destination="@id/questionFragment" />
    </fragment>

    <fragment
        android:id="@+id/questionFragment"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.QuestionFragment"
        android:label="QuestionFragment" >
        <action
            android:id="@+id/action_questionFragment_to_submitBottomSheet"
            app:destination="@id/submitBottomSheet" />
        <action
            android:id="@+id/action_questionFragment_self"
            app:destination="@id/questionFragment" />
    </fragment>

    <dialog
        android:id="@+id/submitBottomSheet"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.SubmitBottomSheet"
        android:label="SubmitBottomSheet" >
        <action
            android:id="@+id/action_submitBottomSheet_to_questionFragment"
            app:destination="@id/questionFragment" />
        <action
            android:id="@+id/action_submitBottomSheet_to_feedbackFragment"
            app:destination="@id/feedbackFragment" />
    </dialog>
    <fragment
        android:id="@+id/feedbackFragment"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.FeedbackFragment"
        android:label="FeedbackFragment" />
    <fragment
        android:id="@+id/interviewDetailsFragment"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.InterviewDetailsFragment"
        android:label="InterviewDetailsFragment" >
        <action
            android:id="@+id/action_interviewDetailsFragment_to_answersFragment"
            app:destination="@id/answersFragment" />
    </fragment>
    <fragment
        android:id="@+id/answersFragment"
        android:name="com.graduation.softskillsmeter.ui.home.fragments.AnswersFragment"
        android:label="AnswersFragment" />
</navigation>