<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackgroundPrimary"
            tools:context=".ui.home.fragments.HomeFragment">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_header_title"
                style="@style/TitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xxlarge"
                android:text="@string/final_score"
                app:layout_constraintBottom_toBottomOf="@id/iv_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.33" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xlarge"
                android:background="@drawable/background_border_white_radius"
                android:fontFamily="@font/gt_america_extended_medium"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/regular"
                android:text="9/10"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_header_title" />

            <TextView
                android:id="@+id/tv_title_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/regular"
                android:layout_marginTop="@dimen/regular"
                android:fontFamily="@font/gt_america_regular"
                android:text="@string/feedback"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_header" />

            <TextView
                android:id="@+id/tv_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/regular"
                android:layout_marginVertical="@dimen/small"
                android:layout_marginBottom="@dimen/xxlarge"
                android:drawableEnd="@drawable/ic_share_black_24dp"
                android:drawablePadding="@dimen/small"
                android:fontFamily="@font/gt_america_regular"
                android:text="@string/share"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_size_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/recycler_feedback" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/regular"
                app:layout_constraintTop_toBottomOf="@id/tv_title_feedback"
                tools:itemCount="5"
                tools:listitem="@layout/item_feedback" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>