<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBackgroundPrimary"
            tools:context=".ui.home.fragments.HomeFragment">

            <ImageView
                android:id="@+id/iv_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F1F2F6"
                android:backgroundTint="#F1F2F6"
                android:scaleType="fitXY"
                android:src="@drawable/header"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_profile_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/extended_medium"
                android:text="Gaza, Palestine"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_regular"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_name" />

            <TextView
                android:id="@+id/tv_profile_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small"
                android:fontFamily="@font/extended_bold"
                android:text="Eman Ahmad"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_size_large"
                app:layout_constraintTop_toBottomOf="@id/iv_profile" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar3"
                app:civ_border_color="@color/colorPrimary"
                app:civ_border_width="1dp"
                app:layout_constraintBottom_toBottomOf="@id/iv_header"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_header" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/layout_notifications"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="24dp"
                app:layout_constraintTop_toBottomOf="@id/tv_profile_location">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/regular"
                    android:background="@color/white"
                    app:cardCornerRadius="@dimen/radius_background_small"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/regular">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:text="@string/interview_score_details"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorTextPrimary"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/max_score"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_max_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="9/10"
                                android:textSize="@dimen/text_size_small" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/min_score"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_min_score"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="5/10"
                                android:textSize="@dimen/text_size_small" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/score_average"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/score_average"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="7/10"
                                android:textSize="@dimen/text_size_small" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/no_of_interviews"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_no_of_interviews"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="5"
                                android:textSize="@dimen/text_size_small" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/regular"
                    android:background="@color/white"
                    app:cardCornerRadius="@dimen/radius_background_small"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/regular">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:text="@string/personal_information"
                            android:textAlignment="center"
                            android:textAllCaps="true"
                            android:textColor="@color/colorTextPrimary"
                            android:textStyle="bold" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/specialization"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_specialization"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/small"
                                android:text="-"
                                android:textSize="@dimen/text_size_small"
                                app:drawableEndCompat="@drawable/ic_arrow_right"
                                app:drawableTint="@color/colorTextTertiary" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/email"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_email"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/small"
                                android:text="-"
                                android:textSize="@dimen/text_size_small"
                                app:drawableEndCompat="@drawable/ic_arrow_right"
                                app:drawableTint="@color/colorTextTertiary" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/gender"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_gender"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/small"
                                android:text="-"
                                android:textSize="@dimen/text_size_small"
                                app:drawableEndCompat="@drawable/ic_arrow_right"
                                app:drawableTint="@color/colorTextTertiary" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:background="@color/colorTextTertiary" />

                        <androidx.appcompat.widget.LinearLayoutCompat
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:paddingVertical="@dimen/small">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/dob"
                                android:textSize="@dimen/text_size_small"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_dob"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:drawablePadding="@dimen/small"
                                android:text="-"
                                android:textSize="@dimen/text_size_small"
                                app:drawableEndCompat="@drawable/ic_arrow_right"
                                app:drawableTint="@color/colorTextTertiary" />

                        </androidx.appcompat.widget.LinearLayoutCompat>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/regular"
                    android:background="@color/white"
                    app:cardCornerRadius="@dimen/cardview_default_radius"
                    app:cardElevation="@dimen/cardview_default_elevation">


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    app:cardCornerRadius="@dimen/radius_background_small"
                    app:cardElevation="@dimen/cardview_default_elevation">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:padding="16dp"
                        android:text="@string/share_1"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_size_medium"
                        app:drawableEndCompat="@drawable/ic_share"
                        app:drawableTint="@color/colorTextPrimary" />
                </androidx.cardview.widget.CardView>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>